--- a/assets/_sass/_structure.scss
+++ b/assets/_sass/_structure.scss
@@ -103,6 +103,10 @@
     margin-bottom: 10px;
   }
 
+  a {
+    color: $link-color;
+  }
+
   #presidium-content {
     margin: 40px auto 0 auto;
     height: 100%;
